feat: update .env.example with monitor delay

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ PORT=3000
 CERT_PATH="cert/localhost.pem"
 CERT_KEY_PATH="cert/localhost-key.pem"
 
+# On macOs the delay is integer, on linux is float
+MONITOR_DELAY=0.2
